--- a/src/ClaimsPlugin.Infrastructure/ClaimsPlugin.Infrastructure.csproj
+++ b/src/ClaimsPlugin.Infrastructure/ClaimsPlugin.Infrastructure.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Data.Sqlclient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+  <ProjectReference Include="..\..\src\ClaimsPlugin.Shared\ClaimsPlugin.Shared.csproj" />
+  <ProjectReference Include="..\..\src\ClaimsPlugin.Domain\ClaimsPlugin.Domain.csproj" />
   </ItemGroup>
 
 </Project>
