add more common item

--- a/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
@@ -24,5 +24,20 @@
         "Name": "Console"
       }
     ]
-  }
+  },
+  "HostingSettings": [
+    {
+      "Name": "ClaimsPlugin",
+      "RestHttps": {
+        "Url": "https://localhost",
+        "Port": 4000,
+        "Enabled": true
+      },
+      "RestHttp": {
+        "Url": "http://localhost",
+        "Port": 5000,
+        "Enabled": true
+      }
+    }
+  ]
 }
