--- a/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
+++ b/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
@@ -6,16 +6,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="ClaimsPlugin.Api.csproj.user" />
-  </ItemGroup>
+
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
     <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClaimsPlugin.Shared\ClaimsPlugin.Shared.csproj" />
+    <ProjectReference Include="..\ClaimsPlugin.Application\ClaimsPlugin.Application.csproj" />
   </ItemGroup>
 
 </Project>
