--- a/src/ClaimsPlugin.Api/Configurations/appsettings.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "BackendDb": "Server=L210601011W10;Database=EtiqaReceiptDB;UID=aklifsainie;Password=Scor08pion;TrustServerCertificate=true",
-    "UATDB" :  "Server=10.230.22.66,14332;Database=EtiqaReceiptDB;UID=RR;Password=P@ssw0rd;TrustServerCertificate=true"
+    "UATDB": "Server=10.230.22.66,14332;Database=EtiqaReceiptDB;UID=RR;Password=P@ssw0rd;TrustServerCertificate=true"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -59,5 +59,20 @@
       "ContentType": "application/json",
       "StatusCode": 429
     }
-  }
+  },
+  "HostingSettings": [
+    {
+      "Name": "ClaimsPlugin",
+      "RestHttps": {
+        "Url": "https://localhost",
+        "Port": 4000,
+        "Enabled": true
+      },
+      "RestHttp": {
+        "Url": "http://localhost",
+        "Port": 5000,
+        "Enabled": true
+      }
+    }
+  ]
 }
