add Login Controller

--- a/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BackendDb": "Server=L210601011W10;Database=EtiqaReceiptDB;UID=aklifsainie;Password=Scor08pion;TrustServerCertificate=true"
+    "BackendDb": "Data Source=ZHIHOW;Initial Catalog=LFC;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -39,5 +39,11 @@
         "Enabled": true
       }
     }
-  ]
+  ],
+  "JwtSettings": {
+    "Key": "YourSuperSecretKeyHereMakeSureItIsLongEnough",
+    "Issuer": "LFC",
+    "Audience": "LFC application",
+    "ExpiryMinutes": 120
+  }
 }
