--- a/src/ClaimsPlugin.Api/Configurations/appsettings.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "BackendDb": "Server=L210601011W10;Database=EtiqaReceiptDB;UID=aklifsainie;Password=Scor08pion;TrustServerCertificate=true",
-    "UATDB": "Server=10.230.22.66,14332;Database=EtiqaReceiptDB;UID=RR;Password=P@ssw0rd;TrustServerCertificate=true"
+    "BackendDb": "Data Source=ZHIHOW;Initial Catalog=LFC;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -74,5 +73,11 @@
         "Enabled": true
       }
     }
-  ]
+  ],
+  "JwtSettings": {
+    "Key": "YourSuperSecretKeyHereMakeSureItIsLongEnough",
+    "Issuer": "LFC",
+    "Audience": "LFC application",
+    "ExpiryMinutes": 120
+  }
 }
