--- a/src/ClaimsPlugin.Domain/ClaimsPlugin.Domain.csproj
+++ b/src/ClaimsPlugin.Domain/ClaimsPlugin.Domain.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClaimsPlugin.Shared\ClaimsPlugin.Shared.csproj" />
+  </ItemGroup> 
 
 </Project>
