--- a/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
+++ b/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
@@ -23,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ClaimsPlugin.Shared\ClaimsPlugin.Shared.csproj" />
     <ProjectReference Include="..\ClaimsPlugin.Application\ClaimsPlugin.Application.csproj" />
+    <ProjectReference Include="..\ClaimsPlugin.Infrastructure\ClaimsPlugin.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
