--- a/src/ClaimsPlugin.Application/ClaimsPlugin.Application.csproj
+++ b/src/ClaimsPlugin.Application/ClaimsPlugin.Application.csproj
@@ -8,12 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ClaimsPlugin.Shared\ClaimsPlugin.Shared.csproj" />
+    <ProjectReference Include="..\ClaimsPlugin.Domain\ClaimsPlugin.Domain.csproj" />
   </ItemGroup>
 
 </Project>
