--- a/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
+++ b/src/ClaimsPlugin.Api/ClaimsPlugin.Api.csproj
@@ -9,6 +9,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
