--- a/src/ClaimsPlugin.Api/Configurations/appsettings.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BackendDb": "Data Source=ZHIHOW;Initial Catalog=LFC;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    //"BackendDb": "Data Source=ZHIHOW;Initial Catalog=LFC;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "BackendDb": "Data Source=localhost;Initial Catalog=LFC;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "MinimumLevel": {
