--- a/src/ClaimsPlugin.Api/Configurations/appsettings.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.json
@@ -76,7 +76,7 @@
     }
   ],
   "JwtSettings": {
-    "Key": "YourSuperSecretKeyHereMakeSureItIsLongEnough",
+    "Key": "3T1q@dA^RaN0909093T1q@dA^RaND@T@3aNM@y8@NK",
     "Issuer": "LFC",
     "Audience": "LFC application",
     "ExpiryMinutes": 120
