access refresh token

--- a/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
+++ b/src/ClaimsPlugin.Api/Configurations/appsettings.Development.json
@@ -44,7 +44,7 @@
   "JwtSettings": {
     "Key": "3T1q@dA^RaN0909093T1q@dA^RaND@T@3aNM@y8@NK",
     "Issuer": "LFC",
-    "Audience": "LFC application",
+    "Audience": "https://localhost:4000",
     "ExpiryMinutes": 120
   }
 }
